Set up token route and rename script pdf processor
