# src/routes.ts
@@ -1,6 +1,7 @@
 import express, { NextFunction } from 'express';
 import ScriptController from './scriptController';
 import { GetScriptBody } from './types';
+import TokensController from './tokensController';
 
 const router = express.Router();
 
@@ -21,4 +22,14 @@ router.post<never, Buffer, GetScriptBody, never>(
         }
     },
 );
+
+router.post<never, string, any, never>('/tokens', async (_req, res, next) => {
+    try {
+        const tokensController = new TokensController();
+        const response = await tokensController.GetTokens(_req.body);
+        return res.send(response);
+    } catch (error) {
+        next(error);
+    }
+});
 export default router;
